// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with class name 1`] = `
<div
  className="virtualized-grid--wrapper class-name"
>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "visible",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="virtualized-grid--wrapper"
>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "visible",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`renders correctly with scrollable class name 1`] = `
<div
  className="virtualized-grid--wrapper"
>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "visible",
        "width": 0,
      }
    }
  />
</div>
`;
